<resources>
    <string name="app_name">SLCM</string>
    <string name="slcm">SLCM</string>
    <string name="student_sign_in_title">Student: Sign In</string>
    <string name="faculty_sign_in_title">Faculty: Sign In</string>
    <string name="registration_no">Registration Number:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="faculty_login_link"><u>Faculty Login</u></string>
    <string name="student_login_link"><u>Student Login</u></string>
    <string name="new_password">New password:</string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="announcementsdashboard">Announce-\nments</string>
    <string name="announcements">Announcements</string>
    <string name="time_tabledashboard">Time\nTable</string>
    <string name="time_table">Time Table</string>
    <string name="attendancedashboard">Attend-\nance</string>
    <string name="attendance">Attendance</string>
    <string name="internal_marks">Internal\nMarks</string>
    <string name="marksheet">Mark\nSheet</string>
    <string name="marks">Marks</string>
    <string name="fees">Fees\n</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="fac_create_announcement">Create Announcement</string>
    <string name="fac_view_announcements">View Announcements</string>
    <string name="fac_submit">SUBMIT</string>
    <string name="fac_date_day">Day:</string>
    <string name="fac_date_val">Date:</string>
    <string name="select_date">Select Date:</string>
    <string name="fac_update">Update</string>
    <string name="next">NEXT</string>
    <string name="Fac_Class"><![CDATA[Select Class:]]></string>
    <string name="title">Subject code: MCA 4245 Data Analytics</string>
    <string name="assessment_type">Select Assessment Type:</string>
    <string name="internal_assignment_4">Internal Assignment 4</string>
    <string name="internal_assignment_3">Internal Assignment 3</string>
    <string name="midterm">MidTerm</string>
    <string name="internal_assignment_1">Internal Assignment 1</string>
    <string name="internal_assignment_2">Internal Assignment 2</string>
    <string name="maximum_marks">Maximum Marks:</string>
    <string name="enter_marks">Enter marks</string>
    <string name="date">Date:</string>
    <string name="change">CHANGE</string>
    <string name="view_details">View Details</string>
    <string name="change_password">Change Password</string>
    <string name="semester">Semester:</string>
    <string name="select_your_subject">Select Subject:</string>
    <string name="all_present">All Present</string>
    <string name="all_absent">All Absent</string>
    <string name="students">ALL STUDENTS</string>
    <string name="selected_date">Selected Date:</string>
    <string name="total">Total</string>
    <string name="attended">Attended</string>
    <string name="missed">Missed</string>
    <string name="enter_announcement">Enter announcement</string>
    <string name="message">Message:</string>
    <string name="enter_announcement_title">Enter announcement title</string>
    <string name="ann_title">Title:</string>
    <string name="chat">Chat</string>


    <string-array name="semesters">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>
</resources>