<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faculty.FacultyMarksType">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:id="@+id/assessTypeLayout"
        android:background="@color/light_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:id="@+id/assessTitle"
                android:text="@string/assessment_type" />

        </RelativeLayout>
        <RadioGroup
            android:id="@+id/assessRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/internalAssignment1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_assignment_1"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/internalAssignment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_assignment_2"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/internalAssignment3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_assignment_3"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/internalAssignment4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_assignment_4"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/midTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midterm"
                android:textSize="20dp" />
        </RadioGroup>



    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/assessTypeLayout"
        android:id="@+id/maxMarksLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/maximum_marks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_marks"
            android:padding="10dp"
            android:text="5"
            android:id="@+id/maxMarksText"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/maxMarksLayout"
        android:id="@+id/marksDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/date" />
        <ImageButton
            android:id="@+id/marksCalendarButton"
            android:layout_width="26dp"
            android:layout_height="27dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_calendar_month_24"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/marksDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />
    </LinearLayout>
        <Button
            android:id="@+id/nextBtn"
            android:layout_below="@+id/marksDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/next"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/maroon"/>
</RelativeLayout>