<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faculty.FacultyCreateAnnouncement">
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/ann_title" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/edit_fac_create_announcement_title"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_announcement_title"
            android:padding="10dp"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/lay1"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/message" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/edit_fac_create_announcement_message"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_announcement"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_below="@+id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/fac_submit"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/dark_green"/>
</RelativeLayout>
