<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.StudentDashboard">

    <GridLayout
        android:id="@+id/Btn_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="3"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_margin="5dp">

        <!-- First Row -->

        <Button
            android:id="@+id/BtnAnnouncement"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/announcements"
            android:textSize="11sp" />

        <Button
            android:id="@+id/BtnTimeTable"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/time_table"
            android:textSize="11sp" />

        <Button
            android:id="@+id/BtnAttendance"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/attendance"
            android:textSize="11sp" />

        <!-- Second Row -->
        <Button
            android:id="@+id/BtnInternalMarks"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/internal_marks"
            android:textSize="11sp" />
        <Button
            android:id="@+id/BtnMarkSheet"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/marksheet"
            android:textSize="11dp" />

        <Button
            android:id="@+id/BtnFees"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_columnWeight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/fees"
            android:textSize="11sp" />

    </GridLayout>

    <TextView
        android:id="@+id/Announcements_Title"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/Btn_Layout"
android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/announcements"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
       />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative2"
        android:layout_below="@+id/Announcements_Title"
        android:padding="30dp"
        >

        <ListView
            android:id="@+id/stud_dashboard_announcement_ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:divider="@null"
            android:dividerHeight="30dp" />
    </RelativeLayout>

</RelativeLayout>