<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/light_purple"
        android:orientation="vertical"
        app:cornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/SubjectText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Java Programming" />

            <TextView
                android:id="@+id/Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:text="98%" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:layout_marginEnd="80dp"/>

            <TextView
                android:id="@+id/attended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="80dp"
                android:text="@string/attended" />
            <TextView
                android:id="@+id/missed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/missed" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/totalval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="46"
                android:layout_marginEnd="110dp"/>

            <TextView
                android:id="@+id/attendedval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="18sp"
                android:layout_marginEnd="130dp"
                android:text="44" />
            <TextView
                android:id="@+id/missedval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:text="2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>